# NN_FS

./: CMakeLists.txt  NN.cu  NN.cuh  math.cu  neural_net.cu  neural_net.cuh  project_goal.txt  rules.txt
NN-0/: rules.txt
NN-0/NN-0-0/: main.cpp
NN-0/NN-0-1/: CMakeLists.txt  NN_initialize.h  backprop_alg.cpp  backpropogation_alg.cpp  forwardprop_alg.cpp  initialize.cpp  main.cpp  save_WB_conf.cpp
NN-0/NN-0-2/: main.cpp
NN-0/NN-0-3/: main.cpp
PERCEPTRON_FS/NN-0/: NN_driver.cpp  main.cpp
PERCEPTRON_FS/NN-0/NN-0-1/: forwardprop_alg.cpp  image_to_computervision.cpp  save_WB_conf.cpp
SUPERBASIC_FS/SB-0/: init_NN.cpp  init_NN.hpp  main.cpp
SUPERBASIC_FS/SB-0/SB-0-0/: main.cpp
SUPERBASIC_FS/SB-1/: NN_basics.cpp  NN_basics.hpp  NN_training.cpp  init_NN.cpp  init_NN.hpp  read_load_write.cpp
juliafortran_class/jl-0/: init.jl
quad_coord_classification/: rules.txt
quad_coord_classification/SB-1/: Makefile  NN_basics.cpp  NN_basics.hpp  NN_data_gen.cpp  NN_data_gen.hpp  NN_training.cpp  NN_training.hpp  read_load_write.cpp
quad_coord_classification/SB-2/: NN_create_training_data.hpp  NN_init.hpp  NN_run.hpp  NN_training.cpp  NN_training.hpp
quad_coord_classification/SB-3/: Makefile  NN.cpp  NN.hpp  NN_create_training_data.hpp  NN_training.cpp  NN_training.hpp  my_math.cpp  my_math.hpp
summer_NN/: project_goals.txt
summer_NN/0.0/: NN.cpp  NN.hpp  coord.hpp  data.hpp  math.hpp
summer_NN/vers_0/: project_goals.txt
summer_NN/vers_0/0.0/: coord.hpp  data.cpp  data.hpp  gradient_coord.hpp  math.cpp  math.hpp
summer_NN/vers_1/: rules.txt
(+4 files in other folders)
